# kidney_dtsim

./: .gitignore  LICENSE  README.md  pyproject.toml
model_input_public/: CTS_spline_data_dwfg_10000_days.txt  CTS_spline_data_gf_10000_days.txt  donor_age.csv  donor_blood_grp.csv  donor_dso_reg.csv  freq_living_donor.csv  hla_a_freq.csv  hla_b_freq.csv  hla_drb1_freq.csv  new_reg_wait_per_year.csv  nt_status_prob_aalen_johansen.csv  odds_ratios_rd_ESP_filtered_modern.csv  odds_ratios_rd_ETKAS_filtered.csv  peak_vPRAs_freq.csv  recipient_blood_grp.csv  recipient_dso_reg.csv  removal_survival.csv  tidy_waiting_list_example.csv  time_dial_to_reg.csv  tx_per_year.csv  waiting_list_reg_age.csv
notebooks/: .Rhistory  model_load_input.ipynb  model_results_analysis_example.qmd  model_run_example.ipynb
src/kidney_dtsim/: helper_functions.py  model.py  post_transplant_risk_helpers.py
